macros/src/snapshots/balsaq_macros__expand_table__tests__group_optional_field.snap
---
source: macros/src/expand_table.rs
expression: "run(quote! { \"posts\" }, quote!\n{\n    pub struct Post\n    { #[primary_key] pub id: BlobId, #[group] pub sig: Option<SigInfo>, }\n},)"
---
pub struct Post {
    pub id: BlobId,
    pub sig: Option<SigInfo>,
}
impl ::balsaq::Model for Post {
    const CREATE_TABLE: &'static str = ::balsaq::__cf::concatcp!(
        "CREATE TABLE IF NOT EXISTS posts (\n", "    id ", ::balsaq::__cf::str_replace!(<
        BlobId as ::balsaq::Column > ::SQL_TYPE, "{col}", "id"),
        ::balsaq::__null_qualifier(< BlobId as ::balsaq::Column > ::NULLABLE), ",\n",
        ::balsaq::__cf::str_replace!(::balsaq::__cf::str_replace!(< Option < SigInfo > as
        ::balsaq::ColumnGroup > ::DDL, "{P}", "sig_"), "{NN}",
        ::balsaq::__null_qualifier(< Option < SigInfo > as ::balsaq::ColumnGroup >
        ::NULLABLE)), ",\n    PRIMARY KEY (id)", "\n);\n"
    );
    const SELECT: &'static str = ::balsaq::__cf::concatcp!(
        "SELECT ", "id", ", ", ::balsaq::__cf::str_replace!(< Option < SigInfo > as
        ::balsaq::ColumnGroup > ::COLS, "{P}", "sig_"), " FROM posts"
    );
    const INSERT: &'static str = ::balsaq::__cf::concatcp!(
        "INSERT INTO posts (", "id", ", ", ::balsaq::__cf::str_replace!(< Option <
        SigInfo > as ::balsaq::ColumnGroup > ::COLS, "{P}", "sig_"), ") VALUES (", ":id",
        ", ", ::balsaq::__cf::str_replace!(< Option < SigInfo > as ::balsaq::ColumnGroup
        > ::VALS, "{P}", "sig_"), ") ON CONFLICT DO NOTHING"
    );
    type PrimaryKey<'pk> = &'pk BlobId;
    fn from_row(row: &::rusqlite::Row<'_>) -> ::rusqlite::Result<Self> {
        Ok(Self {
            id: row.get("id")?,
            sig: <Option<SigInfo> as ::balsaq::ColumnGroup>::cg_read(row, "sig_")?,
        })
    }
    fn write_params(
        self,
        stmt: &mut ::rusqlite::CachedStatement<'_>,
    ) -> ::rusqlite::Result<usize> {
        let mut params: ::std::vec::Vec<
            (::std::string::String, &dyn ::rusqlite::types::ToSql),
        > = ::std::vec::Vec::new();
        params.push((":id".to_owned(), &self.id as &dyn ::rusqlite::types::ToSql));
        <Option<
            SigInfo,
        > as ::balsaq::ColumnGroup>::cg_write(&self.sig, "sig_", &mut params);
        let params_ref: ::std::vec::Vec<(&str, &dyn ::rusqlite::types::ToSql)> = params
            .iter()
            .map(|(k, v)| (k.as_str(), *v))
            .collect();
        stmt.execute(params_ref.as_slice())
    }
    fn get<'pk>(
        conn: &::rusqlite::Connection,
        pk: Self::PrimaryKey<'pk>,
    ) -> ::rusqlite::Result<Self> {
        const SQL: &str = ::balsaq::__cf::concatcp!(Post::SELECT, " WHERE id = ?1");
        conn.prepare_cached(SQL)?.query_row((pk,), Self::from_row)
    }
}
