macros/src/snapshots/balsaq_macros__expand_table__tests__multi_column_index_generated.snap
---
source: macros/src/expand_table.rs
expression: "run(quote! { \"posts\" }, quote!\n{\n    #[index(author_id, created_at)] pub struct Post\n    { #[primary_key] pub id: i64, pub author_id: i64, pub created_at: i64, }\n},)"
---
pub struct Post {
    pub id: i64,
    pub author_id: i64,
    pub created_at: i64,
}
impl ::balsaq::Model for Post {
    const CREATE_TABLE: &'static str = ::balsaq::__cf::concatcp!(
        "CREATE TABLE IF NOT EXISTS posts (\n", "    id ", ::balsaq::__cf::str_replace!(<
        i64 as ::balsaq::Column > ::SQL_TYPE, "{col}", "id"),
        ::balsaq::__null_qualifier(< i64 as ::balsaq::Column > ::NULLABLE), ",\n",
        "    author_id ", ::balsaq::__cf::str_replace!(< i64 as ::balsaq::Column >
        ::SQL_TYPE, "{col}", "author_id"), ::balsaq::__null_qualifier(< i64 as
        ::balsaq::Column > ::NULLABLE), ",\n", "    created_at ",
        ::balsaq::__cf::str_replace!(< i64 as ::balsaq::Column > ::SQL_TYPE, "{col}",
        "created_at"), ::balsaq::__null_qualifier(< i64 as ::balsaq::Column >
        ::NULLABLE), ",\n    PRIMARY KEY (id)", "\n);\n",
        "CREATE INDEX IF NOT EXISTS idx_posts_author_id_created_at ON posts (author_id, created_at);\n"
    );
    const SELECT: &'static str = ::balsaq::__cf::concatcp!(
        "SELECT ", "id", ", ", "author_id", ", ", "created_at", " FROM posts"
    );
    const INSERT: &'static str = ::balsaq::__cf::concatcp!(
        "INSERT INTO posts (", "id", ", ", "author_id", ", ", "created_at", ") VALUES (",
        ":id", ", ", ":author_id", ", ", ":created_at", ") ON CONFLICT DO NOTHING"
    );
    type PrimaryKey<'pk> = &'pk i64;
    fn from_row(row: &::rusqlite::Row<'_>) -> ::rusqlite::Result<Self> {
        Ok(Self {
            id: row.get("id")?,
            author_id: row.get("author_id")?,
            created_at: row.get("created_at")?,
        })
    }
    fn write_params(
        self,
        stmt: &mut ::rusqlite::CachedStatement<'_>,
    ) -> ::rusqlite::Result<usize> {
        let mut params: ::std::vec::Vec<
            (::std::string::String, &dyn ::rusqlite::types::ToSql),
        > = ::std::vec::Vec::new();
        params.push((":id".to_owned(), &self.id as &dyn ::rusqlite::types::ToSql));
        params
            .push((
                ":author_id".to_owned(),
                &self.author_id as &dyn ::rusqlite::types::ToSql,
            ));
        params
            .push((
                ":created_at".to_owned(),
                &self.created_at as &dyn ::rusqlite::types::ToSql,
            ));
        let params_ref: ::std::vec::Vec<(&str, &dyn ::rusqlite::types::ToSql)> = params
            .iter()
            .map(|(k, v)| (k.as_str(), *v))
            .collect();
        stmt.execute(params_ref.as_slice())
    }
    fn get<'pk>(
        conn: &::rusqlite::Connection,
        pk: Self::PrimaryKey<'pk>,
    ) -> ::rusqlite::Result<Self> {
        const SQL: &str = ::balsaq::__cf::concatcp!(Post::SELECT, " WHERE id = ?1");
        conn.prepare_cached(SQL)?.query_row((pk,), Self::from_row)
    }
}
