macros/src/snapshots/balsaq_macros__expand_table__tests__single_pk_generates_primary_key_type_and_get.snap
---
source: macros/src/expand_table.rs
expression: "run(quote! { \"widgets\" }, quote!\n{ pub struct Widget { #[primary_key] pub id: BlobId, pub name: String, } },)"
---
pub struct Widget {
    pub id: BlobId,
    pub name: String,
}
impl ::balsaq::Model for Widget {
    const CREATE_TABLE: &'static str = ::balsaq::__cf::concatcp!(
        "CREATE TABLE IF NOT EXISTS widgets (\n", "    id ",
        ::balsaq::__cf::str_replace!(< BlobId as ::balsaq::Column > ::SQL_TYPE, "{col}",
        "id"), ::balsaq::__null_qualifier(< BlobId as ::balsaq::Column > ::NULLABLE),
        ",\n", "    name ", ::balsaq::__cf::str_replace!(< String as ::balsaq::Column >
        ::SQL_TYPE, "{col}", "name"), ::balsaq::__null_qualifier(< String as
        ::balsaq::Column > ::NULLABLE), ",\n    PRIMARY KEY (id)", "\n);\n"
    );
    const SELECT: &'static str = ::balsaq::__cf::concatcp!(
        "SELECT ", "id", ", ", "name", " FROM widgets"
    );
    const INSERT: &'static str = ::balsaq::__cf::concatcp!(
        "INSERT INTO widgets (", "id", ", ", "name", ") VALUES (", ":id", ", ", ":name",
        ") ON CONFLICT DO NOTHING"
    );
    type PrimaryKey<'pk> = &'pk BlobId;
    fn from_row(row: &::rusqlite::Row<'_>) -> ::rusqlite::Result<Self> {
        Ok(Self {
            id: row.get("id")?,
            name: row.get("name")?,
        })
    }
    fn write_params(
        self,
        stmt: &mut ::rusqlite::CachedStatement<'_>,
    ) -> ::rusqlite::Result<usize> {
        let mut params: ::std::vec::Vec<
            (::std::string::String, &dyn ::rusqlite::types::ToSql),
        > = ::std::vec::Vec::new();
        params.push((":id".to_owned(), &self.id as &dyn ::rusqlite::types::ToSql));
        params.push((":name".to_owned(), &self.name as &dyn ::rusqlite::types::ToSql));
        let params_ref: ::std::vec::Vec<(&str, &dyn ::rusqlite::types::ToSql)> = params
            .iter()
            .map(|(k, v)| (k.as_str(), *v))
            .collect();
        stmt.execute(params_ref.as_slice())
    }
    fn get<'pk>(
        conn: &::rusqlite::Connection,
        pk: Self::PrimaryKey<'pk>,
    ) -> ::rusqlite::Result<Self> {
        const SQL: &str = ::balsaq::__cf::concatcp!(Widget::SELECT, " WHERE id = ?1");
        conn.prepare_cached(SQL)?.query_row((pk,), Self::from_row)
    }
}
