macros/src/snapshots/balsaq_macros__expand_table__tests__track_last_update_ddl_and_insert.snap
---
source: macros/src/expand_table.rs
expression: "run(quote! { \"commits\" }, quote!\n{\n    #[track_last_update] pub struct Commit\n    { #[primary_key] pub id: BlobId, pub data: String, }\n},)"
---
pub struct Commit {
    pub id: BlobId,
    pub data: String,
}
impl ::balsaq::Model for Commit {
    const CREATE_TABLE: &'static str = ::balsaq::__cf::concatcp!(
        "CREATE TABLE IF NOT EXISTS commits (\n", "    id ",
        ::balsaq::__cf::str_replace!(< BlobId as ::balsaq::Column > ::SQL_TYPE, "{col}",
        "id"), ::balsaq::__null_qualifier(< BlobId as ::balsaq::Column > ::NULLABLE),
        ",\n", "    data ", ::balsaq::__cf::str_replace!(< String as ::balsaq::Column >
        ::SQL_TYPE, "{col}", "data"), ::balsaq::__null_qualifier(< String as
        ::balsaq::Column > ::NULLABLE),
        ",\n    __last_written_ms INTEGER NOT NULL DEFAULT (unixepoch('now') * 1000)",
        ",\n    PRIMARY KEY (id)", "\n);\n"
    );
    const SELECT: &'static str = ::balsaq::__cf::concatcp!(
        "SELECT ", "id", ", ", "data", " FROM commits"
    );
    const INSERT: &'static str = ::balsaq::__cf::concatcp!(
        "INSERT INTO commits (", "id", ", ", "data", ") VALUES (", ":id", ", ", ":data",
        ") ON CONFLICT(id) DO UPDATE SET __last_written_ms = MAX(__last_written_ms, unixepoch('now') * 1000)"
    );
    type PrimaryKey<'pk> = &'pk BlobId;
    fn from_row(row: &::rusqlite::Row<'_>) -> ::rusqlite::Result<Self> {
        Ok(Self {
            id: row.get("id")?,
            data: row.get("data")?,
        })
    }
    fn write_params(
        self,
        stmt: &mut ::rusqlite::CachedStatement<'_>,
    ) -> ::rusqlite::Result<usize> {
        let mut params: ::std::vec::Vec<
            (::std::string::String, &dyn ::rusqlite::types::ToSql),
        > = ::std::vec::Vec::new();
        params.push((":id".to_owned(), &self.id as &dyn ::rusqlite::types::ToSql));
        params.push((":data".to_owned(), &self.data as &dyn ::rusqlite::types::ToSql));
        let params_ref: ::std::vec::Vec<(&str, &dyn ::rusqlite::types::ToSql)> = params
            .iter()
            .map(|(k, v)| (k.as_str(), *v))
            .collect();
        stmt.execute(params_ref.as_slice())
    }
    fn get<'pk>(
        conn: &::rusqlite::Connection,
        pk: Self::PrimaryKey<'pk>,
    ) -> ::rusqlite::Result<Self> {
        const SQL: &str = ::balsaq::__cf::concatcp!(Commit::SELECT, " WHERE id = ?1");
        conn.prepare_cached(SQL)?.query_row((pk,), Self::from_row)
    }
}
