macros/src/snapshots/balsaq_macros__expand_table__tests__unique_index_generated.snap
---
source: macros/src/expand_table.rs
expression: "run(quote! { \"users\" }, quote!\n{\n    #[index(email, unique = true)] pub struct User\n    { #[primary_key] pub id: i64, pub email: String, }\n},)"
---
pub struct User {
    pub id: i64,
    pub email: String,
}
impl ::balsaq::Model for User {
    const CREATE_TABLE: &'static str = ::balsaq::__cf::concatcp!(
        "CREATE TABLE IF NOT EXISTS users (\n", "    id ", ::balsaq::__cf::str_replace!(<
        i64 as ::balsaq::Column > ::SQL_TYPE, "{col}", "id"),
        ::balsaq::__null_qualifier(< i64 as ::balsaq::Column > ::NULLABLE), ",\n",
        "    email ", ::balsaq::__cf::str_replace!(< String as ::balsaq::Column >
        ::SQL_TYPE, "{col}", "email"), ::balsaq::__null_qualifier(< String as
        ::balsaq::Column > ::NULLABLE), ",\n    PRIMARY KEY (id)", "\n);\n",
        "CREATE UNIQUE INDEX IF NOT EXISTS idx_users_email ON users (email);\n"
    );
    const SELECT: &'static str = ::balsaq::__cf::concatcp!(
        "SELECT ", "id", ", ", "email", " FROM users"
    );
    const INSERT: &'static str = ::balsaq::__cf::concatcp!(
        "INSERT INTO users (", "id", ", ", "email", ") VALUES (", ":id", ", ", ":email",
        ") ON CONFLICT DO NOTHING"
    );
    type PrimaryKey<'pk> = &'pk i64;
    fn from_row(row: &::rusqlite::Row<'_>) -> ::rusqlite::Result<Self> {
        Ok(Self {
            id: row.get("id")?,
            email: row.get("email")?,
        })
    }
    fn write_params(
        self,
        stmt: &mut ::rusqlite::CachedStatement<'_>,
    ) -> ::rusqlite::Result<usize> {
        let mut params: ::std::vec::Vec<
            (::std::string::String, &dyn ::rusqlite::types::ToSql),
        > = ::std::vec::Vec::new();
        params.push((":id".to_owned(), &self.id as &dyn ::rusqlite::types::ToSql));
        params.push((":email".to_owned(), &self.email as &dyn ::rusqlite::types::ToSql));
        let params_ref: ::std::vec::Vec<(&str, &dyn ::rusqlite::types::ToSql)> = params
            .iter()
            .map(|(k, v)| (k.as_str(), *v))
            .collect();
        stmt.execute(params_ref.as_slice())
    }
    fn get<'pk>(
        conn: &::rusqlite::Connection,
        pk: Self::PrimaryKey<'pk>,
    ) -> ::rusqlite::Result<Self> {
        const SQL: &str = ::balsaq::__cf::concatcp!(User::SELECT, " WHERE id = ?1");
        conn.prepare_cached(SQL)?.query_row((pk,), Self::from_row)
    }
}
